based on position if group

--- a/index.html
+++ b/index.html
@@ -8,12 +8,40 @@
 </head>
 
 <body>
-	<div id="webgi-canvas-container">
+	
 		<canvas id="webgi-canvas"></canvas>
-	</div>
 
-	<script src="src/index.ts">
-	</script>
+
+	<main>
+		 <section class="section first">
+			1
+		</section>
+	
+		<section class="section second">
+			2
+		
+		</section>
+	
+		<section class="section third">
+			3
+		</section> 
+		<!-- <section class="section four">
+			4
+		</section> -->
+		<!-- <section class="section five">
+			3
+		</section>  -->
+		
+	</main>
+
+
+	
+
+	
+	
+
+	<script src="src/index.js">
+	</script>	
 </body>
 
 </html>
