Car position decided

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
 		<section class="section third">
 			3
 		</section> 
-		<!-- <section class="section four">
+		<section class="section four">
 			4
-		</section> -->
-		<!-- <section class="section five">
+		</section>
+		<section class="section five">
 			3
-		</section>  -->
-		
+		</section> 
+		<section class="section six">
+			3
+		</section> 
 	</main>
 
 
