First section and merged scrolltrigger with browser scroll

--- a/index.html
+++ b/index.html
@@ -1,49 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>WebGi starter</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
 
-<head>
-	<title>WebGi starter</title>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Orbitron:wght@600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-	
-		<canvas id="webgi-canvas"></canvas>
+  <body>
+    <canvas id="webgi-canvas"></canvas>
 
+    <main class="mainContainer">
+      <section class="section first">
+        <div class="container1">
+          <h1>OPS: <span>LIGHTNING</span></h1>
+          <h3>jiotto caspita f1</h3>
+          <p>An experience so Beautiful that even the God envy.</p>
+        </div>
 
-	<main>
-		 <section class="section first">
-			1
-		</section>
-	
-		<section class="section second">
-			2
-		
-		</section>
-	
-		<section class="section third">
-			3
-		</section> 
-		<section class="section four">
-			4
-		</section>
-		<section class="section five">
-			3
-		</section> 
-		<section class="section six">
-			3
-		</section> 
-	</main>
+        <div class="container2">
+          <div class="spec--wrapper">
+            <div class="name">Speed</div>
+            <div class="value--wrapper">
+              <div class="value">210</div>
+              <div class="unit">KM/S</div>
+            </div>
+          </div>
+          <div class="spec--wrapper">
+            <div class="name">Type</div>
+            <div class="value--wrapper">
+              <div class="value">Sports</div>
+            </div>
+          </div>
+          <div class="spec--wrapper">
+            <div class="name">MRPS* Starting at</div>
+            <div class="value--wrapper">
+              <div class="value">$28,995</div>
+            </div>
+          </div>
 
+          <div class="spec--wrapper">
+            <div class="name">Fuel</div>
+            <div class="value--wrapper">
+              <div class="value">Gasoline</div>
+            </div>
+          </div>
+          <div class="spec--wrapper">
+            <div class="name">Capacity</div>
+            <div class="value--wrapper">
+              <div class="value">500</div>
+              <div class="unit">HACK</div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-	
+      <section class="section second">
+        <div class="section--one--container">
+          <h1>Project: lightninng</h1>
+          <p>
+            Variable speed for ultimate fingertip control for all drilling
+            applications. Reverse brush system for full torque and power in
+            forward and reverse, lock-on button for continuous use.
+          </p>
+        </div>
+      </section>
 
-	
-	
+      <section class="section third">
+        <div class="section--one--container">
+          <h1>Perfect Drill</h1>
+        </div>
+      </section>
+      <section class="section four">
+        <div class="section--one--container">
+          <h1>Perfect Drill</h1>
+        </div>
+      </section>
+      <section class="section five">
+        <div class="section--one--container">
+          <h1>Perfect Drill</h1>
+        </div>
+      </section>
+      <section class="section six">
+        <div class="section--one--container">
+          <h1>Perfect Drill</h1>
+        </div>
+      </section>
+    </main>
 
-	<script src="src/index.js">
-	</script>	
-</body>
-
+    <script src="src/index.js"></script>
+  </body>
 </html>
