finished with all section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>WebGi starter</title>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
-    />
+    <title>Jiotto Caspita - by Sudhir Yadav</title>
+ 
+
+ 
+	<meta name="description" content="Threejs Practice Project for product visualization using WEBGi">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Threejs Practice Project for product visualization using WEBGi">
+	<meta property="og:description" content="Threejs Practice Project for product visualization using WEBGi">
+
+  <!-- <meta property="og:url" content="http://drill-webgi-tutorial.vercel.app">
+  <meta property="og:image" content="http://drill-webgi-tutorial.vercel.app/assets/images/preview.jpg"> -->
+ 
+
+  <!-- <meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="drill-webgi-tutorial.vercel.app">
+	<meta property="twitter:url" content="http://drill-webgi-tutorial.vercel.app">
+	<meta name="twitter:title" content="Threejs Practice Project for product visualization using WEBGi">
+	<meta name="twitter:description"
+		content="Threejs Practice Project for product visualization using WEBGi">
+	<meta name="twitter:image" content="http://drill-webgi-tutorial.vercel.app/assets/images/preview.jpg"> -->
+
+
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
+
+
+
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="sudhir yadav">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#F9F9F9">
+    <meta name="theme-color" content="#F9F9F9">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,16 +49,18 @@
 
   <body>
     <canvas id="webgi-canvas"></canvas>
-
     <main class="mainContainer">
       <section class="section first">
-        <div class="container1">
+        <div class="section--one--container1">
+          <nav class="nav--bar">
+            Jiotto Caspita
+          </nav>
+
           <h1>OPS: <span>LIGHTNING</span></h1>
           <h3>jiotto caspita f1</h3>
           <p>An experience so Beautiful that even the God envy.</p>
         </div>
-
-        <div class="container2">
+        <div class="section--one--container2">
           <div class="spec--wrapper">
             <div class="name">Speed</div>
             <div class="value--wrapper">
@@ -62,40 +95,68 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> 
 
-      <section class="section second">
-        <div class="section--one--container">
-          <h1>Project: lightninng</h1>
+     <section class="section second">
+        <div class="section--two--container1">
+          <h1>Prue.</h1>
+          <h1>Rare.</h1>
+          <h1>Beautiful.</h1>
+        </div>
+        <div class="section--two--container2">
+          <span>1989</span>
+          <p>Maihara</p>
+        </div>
+      </section> 
+
+      <section class="section third">
+        <div class="section--three--container">
+          <h1>Premium Experience</h1>
           <p>
-            Variable speed for ultimate fingertip control for all drilling
-            applications. Reverse brush system for full torque and power in
-            forward and reverse, lock-on button for continuous use.
+            The Caspita had a bonded aluminium and carbon fibre monocoque chassis made by Mitsubishi Rayon Co., Ltd. The construction technique involved sandwiching aluminium between layers of carbon fibre and curing them in an autoclave to create a rigid structure. The process was repeated 15 times over a span of more than 2 months.
           </p>
         </div>
       </section>
-
-      <section class="section third">
-        <div class="section--one--container">
-          <h1>Perfect Drill</h1>
-        </div>
-      </section>
       <section class="section four">
-        <div class="section--one--container">
-          <h1>Perfect Drill</h1>
+        <div class="section--four--container">
+          <h1>MORE STABLE</h1>
+          <p>
+            The car had a sleek and aerodynamic body design inspired by Group C
+            race cars. Jiotto Design selected three design proposals out of the
+            initially proposed 200 for final development. Out of the three, a
+            design having an integrated rear wing and large side air intakes was
+            fully developed.
+          </p>
+        </div>
         </div>
       </section>
       <section class="section five">
-        <div class="section--one--container">
-          <h1>Perfect Drill</h1>
+        <div class="section--five--container">
+          <h1>Beautiful DESIGN DNA</h1>
+          <p>
+            We believe that the purest creation are those where the design,the
+            driving experience, the passenger experience and engineering, all
+            play an equal role.
+          </p>
         </div>
       </section>
       <section class="section six">
-        <div class="section--one--container">
-          <h1>Perfect Drill</h1>
+        <div class="section--six--container">
+          <h1>Timeless Design</h1>
+          <p>
+            Woth energising performance derived from optimised aerodynamics
+            ground
+          </p>
         </div>
+
+        <footer>
+          <a href="https://skfb.ly/owMGv">Model By Alex.Ka.</a>
+          <button class="button--footer">BACK TO TOP</button>
+        </footer>
+
       </section>
     </main>
+   
 
     <script src="src/index.js"></script>
   </body>
