--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Jiotto Caspita - by Sudhir Yadav</title>
- 
 
- 
-	<meta name="description" content="Threejs Practice Project for product visualization using WEBGi">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="Threejs Practice Project for product visualization using WEBGi">
-	<meta property="og:description" content="Threejs Practice Project for product visualization using WEBGi">
+<head>
+  <title>Jiotto Caspita - Sudhir</title>
+
+
+
+  <meta name="description" content="Threejs Practice Project for product visualization using WEBGi">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Threejs Practice Project for product visualization using WEBGi">
+  <meta property="og:description" content="Threejs Practice Project for product visualization using WEBGi">
 
   <!-- <meta property="og:url" content="http://drill-webgi-tutorial.vercel.app">
   <meta property="og:image" content="http://drill-webgi-tutorial.vercel.app/assets/images/preview.jpg"> -->
- 
+
 
   <!-- <meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="drill-webgi-tutorial.vercel.app">
@@ -23,141 +24,146 @@
 	<meta name="twitter:image" content="http://drill-webgi-tutorial.vercel.app/assets/images/preview.jpg"> -->
 
 
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
 
 
 
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="sudhir yadav">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="sudhir yadav">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#F9F9F9">
-    <meta name="theme-color" content="#F9F9F9">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicon/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#F9F9F9">
+  <meta name="theme-color" content="#F9F9F9">
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Orbitron:wght@600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Orbitron:wght@600;700;800;900&display=swap"
+    rel="stylesheet" />
+</head>
 
-  <body>
-    <canvas id="webgi-canvas"></canvas>
-    <main class="mainContainer">
-      <section class="section first">
-        <div class="section--one--container1">
-          <nav class="nav--bar">
-            Jiotto Caspita
-          </nav>
+<body>
+  <canvas id="webgi-canvas"></canvas>
+  <main class="mainContainer">
+    <section class="section first">
+      <div class="section--one--container1">
+        <nav class="nav--bar">
+          Jiotto Caspita
+        </nav>
 
-          <h1>OPS: <span>LIGHTNING</span></h1>
-          <h3>jiotto caspita f1</h3>
-          <p>An experience so Beautiful that even the God envy.</p>
-        </div>
-        <div class="section--one--container2">
-          <div class="spec--wrapper">
-            <div class="name">Speed</div>
-            <div class="value--wrapper">
-              <div class="value">210</div>
-              <div class="unit">KM/S</div>
-            </div>
-          </div>
-          <div class="spec--wrapper">
-            <div class="name">Type</div>
-            <div class="value--wrapper">
-              <div class="value">Sports</div>
-            </div>
-          </div>
-          <div class="spec--wrapper">
-            <div class="name">MRPS* Starting at</div>
-            <div class="value--wrapper">
-              <div class="value">$28,995</div>
-            </div>
-          </div>
-
-          <div class="spec--wrapper">
-            <div class="name">Fuel</div>
-            <div class="value--wrapper">
-              <div class="value">Gasoline</div>
-            </div>
-          </div>
-          <div class="spec--wrapper">
-            <div class="name">Capacity</div>
-            <div class="value--wrapper">
-              <div class="value">500</div>
-              <div class="unit">HACK</div>
-            </div>
+        <h1>OPS: <span>LIGHTNING</span></h1>
+        <h3>jiotto caspita f1</h3>
+        <p>An experience so Beautiful that even the God envy.</p>
+      </div>
+      <div class="section--one--container2">
+        <div class="spec--wrapper">
+          <div class="name">Speed</div>
+          <div class="value--wrapper">
+            <div class="value">210</div>
+            <div class="unit">KM/S</div>
           </div>
         </div>
-      </section> 
-
-     <section class="section second">
-        <div class="section--two--container1">
-          <h1>Prue.</h1>
-          <h1>Rare.</h1>
-          <h1>Beautiful.</h1>
+        <div class="spec--wrapper">
+          <div class="name">Type</div>
+          <div class="value--wrapper">
+            <div class="value">Sports</div>
+          </div>
         </div>
-        <div class="section--two--container2">
-          <span>1989</span>
-          <p>Maihara</p>
-        </div>
-      </section> 
-
-      <section class="section third">
-        <div class="section--three--container">
-          <h1>Premium Experience</h1>
-          <p>
-            The Caspita had a bonded aluminium and carbon fibre monocoque chassis made by Mitsubishi Rayon Co., Ltd. The construction technique involved sandwiching aluminium between layers of carbon fibre and curing them in an autoclave to create a rigid structure. The process was repeated 15 times over a span of more than 2 months.
-          </p>
-        </div>
-      </section>
-      <section class="section four">
-        <div class="section--four--container">
-          <h1>MORE STABLE</h1>
-          <p>
-            The car had a sleek and aerodynamic body design inspired by Group C
-            race cars. Jiotto Design selected three design proposals out of the
-            initially proposed 200 for final development. Out of the three, a
-            design having an integrated rear wing and large side air intakes was
-            fully developed.
-          </p>
-        </div>
-        </div>
-      </section>
-      <section class="section five">
-        <div class="section--five--container">
-          <h1>Beautiful DESIGN DNA</h1>
-          <p>
-            We believe that the purest creation are those where the design,the
-            driving experience, the passenger experience and engineering, all
-            play an equal role.
-          </p>
-        </div>
-      </section>
-      <section class="section six">
-        <div class="section--six--container">
-          <h1>Timeless Design</h1>
-          <p>
-            Woth energising performance derived from optimised aerodynamics
-            ground
-          </p>
+        <div class="spec--wrapper">
+          <div class="name">MRPS* Starting at</div>
+          <div class="value--wrapper">
+            <div class="value">$28,995</div>
+          </div>
         </div>
 
-        <footer>
-          <a href="https://skfb.ly/owMGv">Model By Alex.Ka.</a>
-          <button class="button--footer">BACK TO TOP</button>
-        </footer>
+        <div class="spec--wrapper">
+          <div class="name">Fuel</div>
+          <div class="value--wrapper">
+            <div class="value">Gasoline</div>
+          </div>
+        </div>
+        <div class="spec--wrapper">
+          <div class="name">Capacity</div>
+          <div class="value--wrapper">
+            <div class="value">500</div>
+            <div class="unit">HACK</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-      </section>
-    </main>
-   
+    <section class="section second">
+      <div class="section--two--container1 ">
+        <h1>Prue.</h1>
+        <h1>Rare.</h1>
+        <h1>Beautiful.</h1>
 
-    <script src="src/index.js"></script>
-  </body>
+
+      </div>
+      <div class="section--two--container2  ">
+        <span>1989</span>
+        <p>Maihara</p>
+      </div>
+    </section>
+
+    <section class="section third leftSide  ">
+      <div class="section--three--container">
+        <h1>Premium Experience</h1>
+        <p>
+          The Caspita had a bonded aluminium and carbon fibre monocoque chassis made by Mitsubishi Rayon Co., Ltd. The
+          construction technique involved sandwiching aluminium between layers of carbon fibre and curing them in an
+          autoclave to create a rigid structure. The process was repeated 15 times over a span of more than 2 months.
+        </p>
+      </div>
+    </section>
+    <section class="section four rightSide  ">
+      <div class="section--four--container">
+        <h1>more stable</h1>
+        <p>
+          The car had a sleek and aerodynamic body design inspired by Group C
+          race cars. Jiotto Design selected three design proposals out of the
+          initially proposed 200 for final development. Out of the three, a
+          design having an integrated rear wing and large side air intakes was
+          fully developed.
+        </p>
+      </div>
+      </div>
+    </section>
+    <section class="section five rightSide  ">
+      <div class="section--five--container">
+        <h1>Beautiful design dna</h1>
+        <p>
+          We believe that the purest creation are those where the design,the
+          driving experience, the passenger experience and engineering, all
+          play an equal role.
+        </p>
+      </div>
+    </section>
+    <section class="section six leftSide  ">
+      <div class="section--six--container">
+        <h1>Timeless Speed</h1>
+        <p>
+          Woth energising performance derived from optimised aerodynamics
+          ground
+        </p>
+      </div>
+
+      <footer>
+        <a href="https://skfb.ly/owMGv">Model By Alex.Ka.</a>
+        <button class="button--footer">BACK TO TOP</button>
+      </footer>
+
+    </section>
+  </main>
+
+
+  <script src="src/index.js"></script>
+
+</body>
+
 </html>
