--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <!-- <meta property="og:url" content="http://drill-webgi-tutorial.vercel.app">
   <meta property="og:image" content="http://drill-webgi-tutorial.vercel.app/assets/images/preview.jpg"> -->
 
-
-  <!-- <meta name="twitter:card" content="summary_large_image">
+<!-- 
+  <meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="drill-webgi-tutorial.vercel.app">
 	<meta property="twitter:url" content="http://drill-webgi-tutorial.vercel.app">
 	<meta name="twitter:title" content="Threejs Practice Project for product visualization using WEBGi">
@@ -98,14 +98,12 @@
     </section>
 
     <section class="section second">
-      <div class="section--two--container1 ">
+      <div class="section--two--container1">
         <h1>Prue.</h1>
         <h1>Rare.</h1>
         <h1>Beautiful.</h1>
-
-
       </div>
-      <div class="section--two--container2  ">
+      <div class="section--two--container2">
         <span>1989</span>
         <p>Maihara</p>
       </div>
