--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
 <body>
   <canvas id="webgi-canvas"></canvas>
+  <div class="loader">
+		
+		<p>Loading... Please wait</p>
+		<div class="progress"></div>
+	</div>
   <main class="mainContainer">
     <section class="section first">
       <div class="section--one--container1">
