--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 
 <body>
   <canvas id="webgi-canvas"></canvas>
+  <div class="rotation">
+    <p>Please Rotate your device to see the Product</p>
+  </div>
   <div class="loader">
-		
-		<p>Loading... Please wait</p>
-		<div class="progress"></div>
-	</div>
+    <p>Loading... Please wait</p>
+    <div class="progress"></div>
+  </div>
   <main class="mainContainer">
     <section class="section first">
       <div class="section--one--container1">
@@ -96,8 +98,8 @@
 
     <section class="section third leftSide  ">
       <div class="section--three--container">
-        <h1>Premium Experience</h1>
-        <p>
+        <h1 class="title">Premium Experience</h1>
+        <p class="detail">
           The Caspita had a bonded aluminium and carbon fibre monocoque chassis made by Mitsubishi Rayon Co., Ltd. The
           construction technique involved sandwiching aluminium between layers of carbon fibre and curing them in an
           autoclave to create a rigid structure. The process was repeated 15 times over a span of more than 2 months.
@@ -106,8 +108,8 @@
     </section>
     <section class="section four rightSide  ">
       <div class="section--four--container">
-        <h1>more stable</h1>
-        <p>
+        <h1 class="title">more stable</h1>
+        <p class="detail">
           The car had a sleek and aerodynamic body design inspired by Group C
           race cars. Jiotto Design selected three design proposals out of the
           initially proposed 200 for final development. Out of the three, a
@@ -119,8 +121,8 @@
     </section>
     <section class="section five rightSide  ">
       <div class="section--five--container">
-        <h1>Beautiful design dna</h1>
-        <p>
+        <h1 class="title">Beautiful design dna</h1>
+        <p class="detail">
           We believe that the purest creation are those where the design,the
           driving experience, the passenger experience and engineering, all
           play an equal role.
@@ -129,8 +131,8 @@
     </section>
     <section class="section six leftSide  ">
       <div class="section--six--container">
-        <h1>Timeless Speed</h1>
-        <p>
+        <h1 class="title">Timeless Speed</h1>
+        <p class="detail">
           Woth energising performance derived from optimised aerodynamics
           ground
         </p>
